src/blocks/MediaContentAccordion/Mobile/index.module.scss
@use '@scss/common' as *;

.mobileAccordionWrapper {
  position: relative;
  align-items: center;
  height: 100%;
}

.introWrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-bottom: calc(var(--base) * 3);
}

.leader {
  @include label;
  margin-top: 0;
  margin-bottom: calc(var(--base) * 1);
  color: #4D90B2;
}

.heading {
  @include h3;
  margin-top: 0;
  margin-bottom: 0;
}

.mediaBackgroundWrapper {
  position: relative;
  margin-bottom: calc(var(--base) * 3);
}

.gradientBg {
  position: absolute;
  top: 0;
  left: 1px;
  width:  calc(100% - 2px);
  height: 100%;
  pointer-events: none;
  z-index: 1;
}

.transparentBg {
  position: absolute;
  top: 0;
  left: 1px;
  width:  calc(100% - 2px);
  height: 100%;
  pointer-events: none;
  background-color: transparent;
}

.crosshairTopOne, .crosshairTopTwo, .crosshairBottomOne, .crosshairBottomTwo {
  position: absolute;
  width: calc(var(--base) * 1);
  height: auto;
  color: var(--theme-elevation-1000);
  opacity: 0.5;
  z-index: 2;
}

.crosshairTopOne {
  top: calc(var(--base) * -0.5);
  left: calc(var(--base) * -0.5);
}

.crosshairTopTwo {
  top: calc(var(--base) * -0.5);
  right: calc(var(--base) * -0.5);
}

.crosshairBottomOne {
  bottom: calc(var(--base) * -0.5);
  left: calc(var(--base) * -0.5);
}

.crosshairBottomTwo {
  bottom: calc(var(--base) * -0.5);
  right: calc(var(--base) * -0.5);
}

.crosshairTopRight, .crosshairBottomRight {
  position: absolute;
  width: calc(var(--base) * 1);
  height: auto;
  color: var(--theme-elevation-1000);
  opacity: 0.5;
}

.crosshairTopRight {
  top: calc(var(--base) * -0.5);
  right: calc(var(--base) * -0.5);
}

.crosshairBottomRight {
  bottom: calc(var(--base) * -0.5);
  right: calc(var(--base) * -0.5);
}

.collapsibleWrapper {
  position: relative;
  border-top: 1px solid var(--grid-line-dark);

  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 2px;
    height: 100%;
    background: var(--color-base-0);
    opacity: 0;
    transition: opacity 0.3s ease;
  }

  &:last-child {
    border-bottom: 1px solid var(--grid-line-dark);
  }

  &:hover {
    .togglerTitle {
      color: var(--color-base-0);
    }
  }

  [data-theme="light"]  & {
    border-top: 1px solid var(--grid-line-light);

    &:before {
      background: var(--color-base-1000);
    }

    &:last-child {
      border-bottom: 1px solid var(--grid-line-light);
    }

    &:hover {
      .togglerTitle {
        color: var(--color-base-1000);
      }
    }
  }
}

.activeLeftBorder {
  &::before {
    opacity: 1;
  }
}

.collapsibleToggler {
  @include btnReset;
  cursor: pointer;
  width: 100%;
  text-align: unset;
  padding: calc(var(--base) * 1.5);
  display: flex;
  align-items: center;
  justify-content: space-between;

  &:hover {
    .title {
      color: var(--color-base-0);
    }
  }

  @include mid-break {
    padding: calc(var(--base) * 1.5) calc(var(--base) * 1);
  }

  [data-theme="light"]  & {
    &:hover {
      .title {
        color: var(--color-base-1000);
      }
    }
  }
}

.togglerTitle {
  color: var(--text-dark);
  font-weight: 500;
  transition: color 0.3s ease-in-out;

  [data-theme="light"]  & {
    color: var(--text-light);
  }
}

.activeItem {
  cursor: unset;
  pointer-events: none;

  .togglerTitle {
    color: var(--color-base-0);
  }

  [data-theme="light"]  & {
    .togglerTitle {
      color: var(--color-base-1000);
    }
  }
}

.chevronDownIcon {
  transition: transform 0.3s ease-in-out;
}

.rotateChevron {
  transform: rotate(180deg);
}

.collapsibleContent {
  position: relative;
}

.contentWrapper {
  margin: 0;
  font-size: 16px;
  line-height: 150%;
  color: var(--text-dark);
  padding: 0 calc(var(--base) * 1.5) calc(var(--base) * 1.5) calc(var(--base) * 1.5);

  [data-theme="light"]  & {
    color: var(--text-light);
  }
}

.mediaDescription {
  padding-bottom: calc(var(--base) * 1);
}

.link {
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  gap: calc(var(--base) * 0.5);
  color: var(--color-base-0);
  font-weight: 500;
  text-decoration: none;

  .arrowIcon {
    width: calc(var(--base) * 0.75);
    height: calc(var(--base) * 0.75);
    transition: transform 0.3s ease;
  }

  &:hover {
    .arrowIcon {
      transform: translateX(10px);
    }
  }

  [data-theme="light"]  & {
    color: var(--color-base-1000);

    .arrowIcon {
      path {
        stroke: var(--color-base-1000);
      }
    }
  }
}

.mediaMobileContainer {
  position: relative;
  width: 100%;
  aspect-ratio: 7/4;
}

.media {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  transition: opacity 0.5s ease-in-out;
  z-index: 2;
  margin: 0 calc(var(--gutter-h) * 1);
  width: calc(100% - var(--gutter-h) * 2);

  > div {
    height: 100%;

    img {
      object-fit: cover;
      width: 100%;
      height: 100%;
    }
  }
}

